<resources>
    <string name="app_name">CridDam</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number_login_id">Mobile Number (Login Id)</string>
    <string name="already_member_login">Already Member? Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="add_current_medicine">Add Current Medicine</string>
    <string name="view_all_current_medicine">View All Current Medicine</string>
    <string name="view_side_effect_of_drug">View Side Effect of Drug</string>
    <string name="view_drug_interaction">View Drug Interaction</string>
    <string name="view_similarity_of_drug">View Similarity of Drug</string>
    <string name="view_contraindication_of_drug">View Contraindication of Drug</string>
    <string name="logout">Log out</string>
    <string name="ok">ঠিক আছে</string>
    <string name="take_later">পরে খাবো</string>
    <string name="it_s_time_to_take_your_medicine">আপনার ঔষধ খাওয়ার সময় হয়েছে</string>

    <string name="your">your</string>
    <string name="time_to_take_medicine">time to take</string>
    <string name="you">You</string>
    <string name="not_take">Did not take</string>

    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_six_digit_password">Password must be at least 6 character</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed_try_with_another_number">Registration failed! Please try another number</string>
    <string name="registration_loading">Registration Loading</string>
    <string name="login_loading">Logging in...</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed_try_with_another_number">Login failed! Try again</string>

    <string name="enter_new_medicine">Medicine Entry (1st Step)</string>
    <string name="select_medicine_type">Select Type of Medicine</string>
    <string name="syrup">Syrup</string>
    <string name="capsule">Capsule</string>
    <string name="tablet">Tablet</string>
    <string name="injection">Injection</string>
    <string name="suppository">Suppository</string>
    <string name="next">Next</string>
    <string name="enter_new_medicine_step_two">Medicine Entry (2nd Step)</string>
    <string name="scan_medicine_name">Scan Medicine Name</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="enter_new_medicine_step_three">Medicine Entry (3rd Step)</string>
    <string name="mgm">MGm</string>
    <string name="gm">Gm</string>
    <string name="chamoch">Chamoch</string>
    <string name="MI">MI</string>
    <string name="enter_new_medicine_last_step">Medicine Entry (Last Step)</string>
    <string name="enter_new_medicine_step_four">Medicine Entry (fourth Step)</string>
    <string name="when_you_are_taking_medicine">When you are taking the medicine?</string>
    <string name="select_time">Select Time</string>
    <string name="txt_morning">Morning</string>
    <string name="txt_afternoon">Afternoon</string>
    <string name="txt_night">Night</string>
    <string name="txt_other">Other</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="enter_medicine_quantity">Enter medicine quantity</string>
    <string name="creating_medicine">Medicine Entry Processing...</string>
    <string name="medicine_entry_successful">Medicine Entry Successful</string>
    <string name="medicine_entry_failed">Medicine Entry Failed</string>
    <string name="select_morning">Select Morning</string>
    <string name="select_afternoon">Select Afternoon</string>
    <string name="select_night">Select Night</string>
    <string name="select_other">Select Other</string>

    <string name="getting_all_medicine">Getting All Medicine...</string>
    <string name="updating_password">Updating Password...</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="password_updating_successful">Password Update Successful</string>
    <string name="password_updating_failed">Password Updating Failed</string>
    <string name="under_development">Under development</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="ex_renidine">ex: ranidine</string>
    <string name="ex_500">ex: 500</string>
    <string name="ex_01700000000">ex: 01700000000</string>
    <string name="ex_star">******</string>
    <string name="ex_123456">ex: 123456</string>
    <string name="ex_mr">Mr. Karim</string>
    <string name="ex_hossen">Hossen</string>
    <string name="add_menu">Home</string>
    <string name="no_medicine_found">No Medicine Found</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="ex_10_inch">ex: 10 Inch</string>
    <string name="ex_10_kg">ex: 10 Kg</string>
    <string name="ex_25">ex: 25.5</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_bmi">Enter BMI</string>
    <string name="txt_your_medicines">আপনার ঔষধ গুলো</string>
    <string name="txt_version_number">ভার্ষন: </string>
    <string name="txt_take_picture">Please take a picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine_time">\"Medicine Time: \"</string>
    <string name="medicine_measurement">\"Medicine Measurement: \"</string>
    <string name="medicine_type">\"Medicine Type: \"</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="okbaby">okbaby</string>
    <string name="nobaby">nobaby</string>
    <string name="emptystomack">Medication on an empty stomach</string>
    <string name="qrconsent">Ok </string>
    <string name="qrconsentno">Not ok  </string>
    <string name="fillstomack" >Medication on a full stomach  </string>
    <string name="drugexsitemtpy">U have a medicine on empty stomach  </string>
    <string name="eting">Have you eaten anything?</string>
    <string name="consent">Yes </string>
    <string name="consentnoo">No </string>
    <string name="emptymlist">You need to take these medicines before meals </string>
    <string name="done">already ate </string>
    <string name="helthnote">helth note</string>
    <string name="hstatus">Health status </string>


</resources>
