<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".userProfile.views.EditProfileFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/first_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_mr"
            android:inputType="text"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/last_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_hossen"
            android:inputType="text"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/mobile_number_login_id"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_phone_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_01700000000"
            android:inputType="phone"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_edit_prof_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="7dp"
                android:paddingLeft="7dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/height"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_height"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_10_inch"
            android:inputType="number"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/weight"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_10_kg"
            android:inputType="number"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/bmi"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_edit_prof_bmi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ex_25"
            android:inputType="numberDecimal"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btn_edit_prof_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>