<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".medicineEntry.fragments.MedicineEntryThreeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/colorRed"
            android:gravity="center"
            android:text="@string/enter_new_medicine_step_three"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_medicine_measurement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:layout_weight="0.5"
                android:hint="@string/ex_500"
                android:background="@drawable/rounded_edittext_white_inside"
                android:gravity="center"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />

            <RadioGroup
                android:id="@+id/rg_medicine_quantity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="0.5">

                <RadioButton
                    android:id="@+id/rb_mgm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mgm" />

                <RadioButton
                    android:id="@+id/rb_gm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gm" />

                <RadioButton
                    android:id="@+id/rb_chamoch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chamoch" />

                <RadioButton
                    android:id="@+id/rb_mi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MI" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_medicine_entry_step_three_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/rounded_button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>